...
            android:layout_marginTop="24dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ISU Registration"
                android:textSize="20sp"
                android:layout_gravity="left"/>

            <Button
                android:id="@+id/isuRegistrationToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="Add/Delete" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/isuRegistrationSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
...
                android:layout_marginTop="16dp"
                android:hint="Given Name"
                android:textColorHint="@color/Black"
                app:boxStrokeColor="@color/Black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/isuGivenName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/Black" />

...
                android:layout_marginTop="16dp"
                android:hint="Middle Name"
                android:textColorHint="@color/Black"
                app:boxStrokeColor="@color/Black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/isuMiddleName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/Black" />

...
                android:layout_marginTop="16dp"
                android:hint="Surname"
                android:textColorHint="@color/Black"
                app:boxStrokeColor="@color/Black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/isuSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/Black" />

...
                android:layout_marginTop="16dp"
                android:hint="Net-ID"
                android:textColorHint="@color/Black"
                app:boxStrokeColor="@color/Black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/isuNetId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/Black" />

...

<!--                </com.google.android.material.textfield.TextInputLayout>-->
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save" />


    </LinearLayout>
...
