<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:scrollbars="none"
    tools:context=".bookAppointment">

    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:id="@+id/textInputLayout"-->
    <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:layout_marginBottom="16dp"-->
    <!--        android:hint="Full Name"-->
    <!--        android:textColorHint="@color/Black"-->
    <!--        app:boxStrokeColor="@color/Black"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent">-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:id="@+id/edtSignUpFullName"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:inputType="text"-->
    <!--            android:singleLine="true"-->
    <!--            android:textColor="@color/Black" />-->
    <!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/textInputLayout"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:hint="Full Name"-->
<!--        android:textColorHint="@color/Black"-->
<!--        app:boxStrokeColor="@color/Black"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/edtSignUpFullName"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="text"-->
<!--            android:singleLine="true"-->
<!--            android:textColor="@color/Black" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/textInputLayout2"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:drawableLeft="@drawable/baseline_person_outline_24"-->
<!--        android:hint="Email"-->
<!--        android:textColorHint="@color/Black"-->
<!--        app:boxStrokeColor="@color/Black"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/edtSignUpEmail"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:singleLine="true"-->
<!--            android:textColor="@color/Black" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="+ 1"-->
<!--            android:textColor="@color/Black"-->
<!--            android:textSize="20sp" />-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:hint="Contact Number"-->
<!--            android:textColorHint="@color/Black"-->
<!--            app:boxStrokeColor="@color/Black">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/edtSignUpMobile"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="number"-->
<!--                android:singleLine="true"-->
<!--                android:textColor="@color/Black" />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->


<!--    </LinearLayout>-->

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="Book Appointment"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dateButtonView"
        style="@android:style/Widget.DeviceDefault.Spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/book"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Book "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startTimeButton"
        style="@android:style/Widget.DeviceDefault.Spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Start Time"
        app:layout_constraintEnd_toStartOf="@+id/endTimeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButtonView" />

    <Button
        android:id="@+id/endTimeButton"
        style="@android:style/Widget.DeviceDefault.Spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="End Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startTimeButton"
        app:layout_constraintTop_toBottomOf="@+id/dateButtonView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="What do you want to do?"
        android:textColorHint="@color/Black"
        app:boxStrokeColor="@color/Black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/Black" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            app:srcCompat="@drawable/baseline_person_outline_24" />

        <TextView
            android:id="@+id/advisorNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>