...
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/bookAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp"
                    android:text="Book Appointment"
...
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/manageUsers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp"
                    android:text="List Users"
...
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/auditDegree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp"
                    android:text="Audit Degree"
...
                    android:textSize="24sp"
                    app:fontFamily="sans-serif-black" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <ImageView
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_action_name"
            tools:layout_editor_absoluteY="40dp" />
...
