...
        android:layout_height="wrap_content"
        android:text="Rate My Course"
        android:textAppearance="?android:textAppearanceLarge"/>
     <RatingBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id ="@+id/ratingBar"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:id="@+id/rateCount"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Write Review. . ."
        android:id="@+id/review"
        android:textAppearance="?android:textAppearanceMedium"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:textAllCaps="false"
        android:id="@+id/submitBtn"
        android:layout_gravity="right"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:id="@+id/showRating"
...
